[gd_scene load_steps=4 format=2]

[ext_resource path="res://res/pyrate_theme.tres" type="Theme" id=1]
[ext_resource path="res://niveles/nivel_10_save_system/WindowDialog_save.gd" type="Script" id=2]
[ext_resource path="res://niveles/nivel_10_save_system/WindowDialog_slot_dialog.tscn" type="PackedScene" id=3]

[node name="WindowDialog_save" type="WindowDialog"]
margin_right = 123.0
margin_bottom = 83.0
rect_min_size = Vector2( 123, 83 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 11.0
margin_right = 117.0
margin_bottom = 71.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 111.0
margin_bottom = 4.0
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 8.0
margin_right = 111.0
margin_bottom = 26.0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 4.0
margin_bottom = 18.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 8.0
margin_right = 103.0
margin_bottom = 18.0
text = "Do you want to save?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator5" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 107.0
margin_right = 111.0
margin_bottom = 18.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 111.0
margin_bottom = 52.0

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 17.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Button_no" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 21.0
margin_right = 43.0
margin_bottom = 22.0
rect_min_size = Vector2( 22, 22 )
text = "NO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 47.0
margin_right = 64.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Button_yes" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 90.0
margin_bottom = 22.0
rect_min_size = Vector2( 22, 22 )
text = "YES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 94.0
margin_right = 111.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 56.0
margin_right = 111.0
margin_bottom = 60.0
size_flags_vertical = 3

[node name="WindowDialog_slot" parent="." instance=ExtResource( 3 )]

[connection signal="popup_hide" from="." to="." method="_on_WindowDialog_save_popup_hide"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_no" to="." method="_on_Button_no_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_yes" to="." method="_on_Button_yes_pressed"]
